Added trade count notification to navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,11 @@
       <% if current_user %>
         <li class="nav-link"><%= link_to "Card Search", root_path %></li>
         <li class="nav-link"><%= link_to "My Binder", user_path(current_user.id)%></li>
-        <li class="nav-link"><%= link_to "My Trades", user_trades_path(current_user.id) %></li>
+        <li class="nav-link">
+          <%= link_to user_trades_path(current_user.id) do %>
+            My Trades <span class="badge-success" id="nav-bar-trade-notification"><%= current_user.unaccepted_trades_count %></span>
+          <% end %>
+        </li>
         <li class="nav-link"><%= link_to "Find Trades", users_path%></li>
 
               </ul>
