--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,10 +1,10 @@
 <div id="comments-container">
 	<% @trade.comments.order(:created_at).each do |comment| %>
-		<div class="comment">
+		<div class="comment" data-id="<%= comment.id %>">
 		  <div class="comment-image">
 		    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
 		  </div>
-		  <div data-id="<%= comment.id %>" class="comment-content">
+		  <div class="comment-content">
 			    <h1><%= comment.user.full_name %></h1>
 			    <p><%= comment.body %></p>
 		    <p class="comment-detail"><%= comment.created_at %></p>
