Added new message notification to trade index

--- a/app/assets/stylesheets/modules/badges.scss
+++ b/app/assets/stylesheets/modules/badges.scss
@@ -1,3 +1,7 @@
+.index-message-badge {
+  margin-left: 1em;
+}
+
 $badge-font-size: 0.75em !default;
 $medium-gray: #999 !default;
 $alert-color: #fff6bf !default;
