made all text and images in modal responsive with vw

--- a/app/assets/stylesheets/modules/buttons.scss
+++ b/app/assets/stylesheets/modules/buttons.scss
@@ -35,7 +35,7 @@ $width: 12em;
 $height: 3em;
 $bg: #CC4331;
 $bg_hover: lighten($bg, 5%);
-$txt_color: #291400;
+$txt_color: black;
 $bg_shadow: rgba(0,0,0,0.4);
 
 // @mixin middle($width, $height) {
