--- a/app/views/cards/_card_modal.html.erb
+++ b/app/views/cards/_card_modal.html.erb
@@ -42,7 +42,7 @@
                     <div class="button-sexiness"><%= link_to "Find Card Nearby", return_first_search_result_path({card_fields: {name: card.name, card_set: card.card_set.name}, distance: 1}), class: "button", :method => :post %></div>
                   </div>
 
-                  <div class="modal-add-to-list-button">
+                    <div class ="modal-add-to-list-button">
                     
                     <div class="modal-inventory-button">                      
                       <div class="button-sexiness"><%= link_to "+ Inventory", add_to_inventory_path(card.id), class: "button", :method => :put, :remote => true %></div>
@@ -51,9 +51,10 @@
                       <div class="button-sexiness"><%= link_to "+ Trade Binder", add_to_tradeable_path(card.id), class: "button", :method => :put, :remote => true %></div>
                     </div>
                     <div class="modal-wishlist-button">
-                      <div class="button-sexiness"><%= link_to "+ Wishlist", add_to_wanted_path(card.id), class: "button", :method => :put, :remote => true %></div>                
+                      <div class="button-sexiness"><%= link_to "+ Wishlist", add_to_wanted_path(card.id), class: "button", :method => :put, :remote => true %></div>
+                               
                     </div>                   
-                                         
+                           </div>              
                   </div>
                   
                 </div>
