Moved comment partial outside of a div

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$(".comments-container").append("<%= escape_javascript(render "last_comment") %>"); 
+// $(".comments-container").append("<%= escape_javascript(render "last_comment") %>"); 
