fixed bug in modals

--- a/app/views/users/_user_lists_card_modal.html.erb
+++ b/app/views/users/_user_lists_card_modal.html.erb
@@ -1,11 +1,11 @@
       <div class="modal">
-        <label for="<%= listed_card.card.id %>">
+        <label for="<%= listed_card.id %>">
           <div class="modal-trigger"><%= listed_card.card.name %></div>
         </label>
-        <input class="modal-state" id="<%= listed_card.card.id %>" type="checkbox" />
+        <input class="modal-state" id="<%= listed_card.id %>" type="checkbox" />
         <div class="modal-window">
           <div class="modal-inner">
-            <label class="modal-close" for="<%= listed_card.card.id %>"></label>
+            <label class="modal-close" for="<%= listed_card.id %>"></label>
            
         <div class="modal-display">
             <div class="modal-header">
