Removed sortable class from table

--- a/app/views/trades/_list_trades.html.erb
+++ b/app/views/trades/_list_trades.html.erb
@@ -1,4 +1,4 @@
-	<table class="table-minimal sortable list-trades-table">
+	<table class="table-minimal list-trades-table">
 		<thead>
 			<tr>
 				<th></th>
