Added magickdaddies link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,9 +85,16 @@
       <h1> MAJICK DADDIES 2015</h1>
     </div>
     <div class= "logos">
-      <a href="https://github.com/pschwyter/mtg_json_api">
-        <%= image_tag "github.jpg" %>
-      </a>
+      <ul>
+        <li>
+          <%= link_to "Team", magicdaddies_path %>
+        </li>
+        <li>
+          <a href="https://github.com/pschwyter/mtg_json_api">
+            <%= image_tag "github.jpg" %>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
   </body>
